<resources>
    <string name="app_name" translatable="false">Hal 062</string>
    <string name="connState">Connection State:</string>
    <string name="rover_disconnected">The Hal Rover is currently DISCONNECTED</string>
    <string name="rover_connected">The Hal Rover is currently CONNECTED</string>
    <string name="no_bluetooth">Your device does not support bluetooth</string>
    <string name="movement_control">Movement Control</string>
    <string name="disconnectBrn">Disconnect</string>
    <string name="connect">Click to connect</string>
    <string name="engine_off">ENGINE OFF</string>
    <string name="engine_on">ENGINE ON</string>
    <string name="engine_status_on">ON</string>
    <string name="engine_status_off">OFF</string>
    <string name="engine_status_info">Click \'ENGINE ON\' to power on the engine and start controlling the Rover</string>
    <string name="connectInfo">Click the button below to search for available devices</string>
    <string name="connectInfoTV2">For Crawler click on: \'XM-15\'</string>
    <string name="connectInfoTV">Click on the proper device to connect with rover</string>
    <string name="connectBtnDsc">Connect</string>
    <string name="connectInfoTV3">For Hal click on: \'Elon_Musk\'</string>
    <string name="notification_bt_off">Please turn on Bluetooth</string>
    <string name="notifiication_dv_found">Devices Found</string>
    <string name="notification_dv_number">"Number of available devices: "</string>
    <string name="alert_bt_off">Bluetooth is OFF, please turn it on and connect again</string>
    <string name="notification_bt_on">Bluetooth ON, discovering in progress...</string>
    <string name="toast_clickAgain">Click again to start connection</string>
    <string name="notification_connected">Rover connected</string>
    <string name="notification_connected_message">You can begin steering the Rover</string>
    <string name="alert_homepage">HomePage</string>
</resources>
