<?xml version="1.0" encoding="utf-8"?><!--Created by AdiJr in March 2020 for KNR PW-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/connectionStateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/rover_connected"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintBottom_toTopOf="@+id/controlButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionStateTextView"
        app:lottie_autoPlay="true"
        app:lottie_fileName="782-check-mark-success.json"
        app:lottie_loop="true" />

    <LinearLayout
        android:id="@+id/controlButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/moveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movement_control"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/disconnectBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnectBrn"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>