<?xml version="1.0" encoding="utf-8"?><!--Created by AdiJr in March 2020 for KNR PW-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/bluetoothAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:scaleX="2.5"
        android:scaleY="2.5"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="bluetooth_search.json"
        app:lottie_loop="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNewDevices"
        android:layout_marginStart="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/connectionStateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectInfoTv3" />

    <TextView
        android:id="@+id/connectionStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/rover_disconnected"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/connectInfoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="4dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/connectInfo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectInfoTv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="4dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/connectInfoTV2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectInfoTv" />

    <TextView
        android:id="@+id/connectInfoTv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="4dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/connectInfoTV3"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectInfoTv2" />

</androidx.constraintlayout.widget.ConstraintLayout>